<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_for_crop_list"
    android:layout_centerHorizontal="true"

    >

    <TextView
        android:layout_marginTop="2sp"
        android:id="@+id/nameofcrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/name"
        android:layout_marginLeft="140sp"
        android:textSize="20sp"
        android:textColor="#0d0c0c"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/liveprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live"
        android:textSize="20sp"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="5sp"
        android:textColor="#383333"

        />

    <TextView
        android:id="@+id/expectedprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/future"
        android:textSize="20sp"
        android:layout_marginLeft="45sp"
        android:layout_marginTop="5sp"
        android:textColor="#383333"

        />

        <TextView
            android:id="@+id/percentagefarmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farmer"
            android:textSize="20sp"
            android:layout_marginLeft="45sp"
            android:layout_marginTop="5sp"
            android:textColor="#383333"

            />



    </LinearLayout>


</LinearLayout>