<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_for_crop_list"
    >

    <TextView
        android:id="@+id/location_of_warehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="16sp"
        android:paddingTop="20sp"
        android:textColor="#0d0c0c"
        android:layout_marginLeft="10sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
     >

        <TextView
            android:id="@+id/total_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="10sp"
            android:text="@string/total"
            android:textSize="16sp"
            android:textColor="#0d0c0c"
            >

        </TextView>

        <TextView
            android:id="@+id/avail_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="10sp"
            android:text="@string/avail"
            android:textSize="16sp"
            android:textColor="#0d0c0c"
            >

        </TextView>


    </LinearLayout>

    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/distance"
        android:textSize="16sp"
        android:paddingBottom="10sp"
        android:textColor="#0d0c0c"
        android:layout_marginLeft="10sp"
        />






</LinearLayout>