<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="30sp"
    android:background="#ffffff"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginLeft="40sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:text="@string/are_you_sure_to_grow_this"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"

            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/no"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>