<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="630sp"
    >

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal"
        android:background="#1C1C1C"
        >

        <TextView
            android:id="@+id/home_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="35sp"
            android:paddingTop="15sp"
            android:paddingRight="70sp"
            android:paddingBottom="10sp"
            android:text="@string/home4"
            android:textColor="#ffffff"></TextView>

        <TextView
            android:id="@+id/warehouse_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="5sp"
            android:paddingTop="15sp"
            android:paddingRight="40sp"
            android:paddingBottom="20sp"
            android:text="@string/warehouses2"

            android:textColor="#adaaaa"></TextView>

        <TextView
            android:id="@+id/schemes_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="30sp"
            android:paddingTop="15sp"
            android:paddingRight="5sp"
            android:paddingBottom="20sp"
            android:text="@string/schemes13"
            android:textColor="#adaaaa"></TextView>


    </LinearLayout>

</LinearLayout>